# malsim-scenarios

./: .gitignore  README.md  generate_dot_files.py  graph_disp.py  mal.py  pyproject.toml  requirements.txt  run_scenario.py
backup_yacine/exp0/: model.json
backup_yacine/exp4/: model.json
backup_yacine/exp5/: model.json
exp0/tmp/: attack_graph.json
exp1/tmp/: attack_graph.json
exp2/tmp/: attack_graph.json
exp3/tmp/: attack_graph.json
exp4/tmp/: attack_graph.json
exp5/tmp/: attack_graph.json
langs/: lang_spec.json  org.mal-lang.coreLang-0.7.0.mar  org.mal-lang.trainingLang-1.0.0.mar  org.mal-lang.tyrLang-0.0.1.mar  org.mal-lang.tyrLang-0.0.4.mar  org.mal-lang.tyrLang-0.0.5.mar  org.mal-lang.tyrLang-0.0.6.mar  org.mal-lang.tyrLang-0.0.7.mar
scenarios/coreLang/: README.md
scenarios/coreLang/demo1/: demo1_model.json  demo1_scenario.yml  demo1_scenario_with_observability.yml
scenarios/coreLang/demo2/: 2024_11_01_15_15_generated_model.yml  demo2_scenario_with_observability.yml
scenarios/coreLang/honor/: Model-0.7.0-27sep.yml  Model-1.0.0-27sep.yml  README.md  honor-0.7.0-scenario.yml  honor-1.0.0-scenario.yml
scenarios/coreLang/run-demo-scenario/: run_demo_model.json  run_demo_scenario.dot  run_demo_scenario.yml
scenarios/coreLang/scenario1/: model.json  scenario.yml
scenarios/coreLang/scenario2/: model.json  scenario.yml
scenarios/coreLang/scenario3/: model.json
scenarios/scenario1/: scenario1.yml
scenarios/scenario2/: model2.yml  scenario2.yml
scenarios/trainingLang/: README.md
tmp/: langspec_file.yml  log.txt  model.yml
(+171 files in other folders)
