[project]
name = "malsim-scenarios"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mal-simulator>=1.1.0",
    "mal-toolbox>=1.1.1",
    "matplotlib>=3.10.7",
    "networkx>=3.5",
]

[dependency-groups]
dev = [
    "ruff>=0.14.4",
]
